Update UI and feat /api/types
