# openapi/openapi.json
@@ -1,8 +1,8 @@
 {
-  "openapi": "3.1.0",
+  "openapi": "3.0.4",
   "info": {
     "title": "Handbook API",
-    "version": "1.0.0",
+    "version": "1.1.2",
     "description": "REST API for managing suppliers, products, requests, and related entities."
   },
   "servers": [
@@ -188,6 +188,28 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/types": {
+      "get": {
+        "summary": "List request",
+        "responses": {
+          "200": {
+            "description": "Object categories with list types.",
+            "content": {
+              "applisation/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "name_category": {
+                      "$ref": "#/components/schemas/Types"
+                    }
+                  }
                 }
               }
             }
@@ -623,6 +645,25 @@
           "idRequest",
           "datetimeComing"
         ]
+      },
+      "Types": {
+        "type": "array",
+        "items": {
+          "$ref": "#/components/schemas/Type_category"
+        }
+      },
+      "Type_category": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "maxLength": 30
+          },
+          "name": {
+            "type": "string",
+            "maxLength": 30
+          }
+        }
       },
       "ErrorResponse": {
         "type": "object",
